Fixed z-index of file input tag

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@
 
 .navbar-btn input {
     font-size: 14px;
+    z-index: 2;
 }
 
 .disabled-btn {
